scraper: rename Boss -> Npc